fixed ul align

--- a/birdChallenge/bird-challenge-starter-code/public/stylesheets/styles.css
+++ b/birdChallenge/bird-challenge-starter-code/public/stylesheets/styles.css
@@ -20,6 +20,8 @@ header,
 h1,
 h2,
 p,
+ul,
+li,
 footer {
   width: 40%;
   text-align: center;
